src/objects/Order_Request__c/Order_Request__c.object-meta.xml
<CustomObject>
    <description>This object is used to handle order requests related to Integrity &amp; Compliance, Gift &amp; hospitality App</description>
    <label>GH Request</label>
    <nameField>
        <displayFormat>GH Request-{0000}</displayFormat>
        <label>GH Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GH Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>