src/objects/Order_Request__c/fields/Accommodation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Accommodation_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accommodation Cost</label>
    <type>Checkbox</type>
</CustomField>