src/objects/Order_Request__c/fields/Entertainment_Cost__c.field-meta.xml
<CustomField>
    <fullName>Entertainment_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entertainment Cost</label>
    <type>Checkbox</type>
</CustomField>