src/objects/Order_Request__c/fields/Event_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Event_Additional_Comments__c</fullName>
    <label>Event-Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>