src/objects/Order_Request__c/fields/Event_Approval_Rejection_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Approval_Rejection_Date__c</fullName>
    <label>Event Approval/Rejection Date</label>
    <type>DateTime</type>
</CustomField>