src/objects/Order_Request__c/fields/Event_Conducted_Country__c.field-meta.xml
<CustomField>
    <fullName>Event_Conducted_Country__c</fullName>
    <label>Event Conducted Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>