src/objects/Order_Request__c/fields/Event_invited_to_government_official__c.field-meta.xml
<CustomField>
    <fullName>Event_invited_to_government_official__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event invited to government official</label>
    <type>Checkbox</type>
</CustomField>