src/objects/Order_Request__c/fields/Event_status__c.field-meta.xml
<CustomField>
    <fullName>Event_status__c</fullName>
    <label>Event status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>