src/objects/Order_Request__c/fields/Event_Total_cost_covered_in_currency__c.field-meta.xml
<CustomField>
    <fullName>Event_Total_cost_covered_in_currency__c</fullName>
    <label>Event-Total cost covered in currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>