src/objects/Order_Request__c/fields/Event_Total_cost_covered_value__c.field-meta.xml
<CustomField>
    <fullName>Event_Total_cost_covered_value__c</fullName>
    <label>Event-Total cost covered value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>