src/objects/Order_Request__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conference</fullName>
            </value>
            <value>
                <fullName>FAT (Factory Acceptance Test)</fullName>
            </value>
            <value>
                <fullName>HUG (Honeywell User Group)</fullName>
            </value>
            <value>
                <fullName>Kickoff Meeting</fullName>
            </value>
            <value>
                <fullName>Signing Ceremony</fullName>
            </value>
            <value>
                <fullName>Completion of a Project</fullName>
            </value>
            <value>
                <fullName>Contractual Requirement</fullName>
            </value>
            <value>
                <fullName>Product/Technology demonstration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>