src/objects/Order_Request__c/fields/Event_Type_of_Currency__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_of_Currency__c</fullName>
    <label>Event-Type of Currency</label>
    <length>50</length>
    <type>Text</type>
</CustomField>