src/objects/Order_Request__c/fields/Flights_Cost__c.field-meta.xml
<CustomField>
    <fullName>Flights_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flights Cost</label>
    <type>Checkbox</type>
</CustomField>