src/objects/Order_Request__c/fields/GH_Req_Number__c.field-meta.xml
<CustomField>
    <fullName>GH_Req_Number__c</fullName>
    <label>GH Req Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>