src/objects/Order_Request__c/fields/Gifts_Cost__c.field-meta.xml
<CustomField>
    <fullName>Gifts_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gifts Cost</label>
    <type>Checkbox</type>
</CustomField>