src/objects/Order_Request__c/fields/Is_Event_Request__c.field-meta.xml
<CustomField>
    <fullName>Is_Event_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Event Request</label>
    <type>Checkbox</type>
</CustomField>