src/objects/Order_Request__c/fields/Is_Event_within_SEA_guidelines__c.field-meta.xml
<CustomField>
    <fullName>Is_Event_within_SEA_guidelines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Event within SEA guidelines</label>
    <type>Checkbox</type>
</CustomField>