src/objects/Order_Request__c/fields/Local_Transportation_Cost__c.field-meta.xml
<CustomField>
    <fullName>Local_Transportation_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Local Transportation Cost</label>
    <type>Checkbox</type>
</CustomField>