src/objects/Order_Request__c/fields/Meals_Cost__c.field-meta.xml
<CustomField>
    <fullName>Meals_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meals Cost</label>
    <type>Checkbox</type>
</CustomField>