src/objects/Order_Request__c/fields/Name_of_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Recipient__c</fullName>
    <label>Name of Recipient</label>
    <length>150</length>
    <type>Text</type>
</CustomField>