src/objects/Order_Request__c/fields/New_Version_GH_Request__c.field-meta.xml
<CustomField>
    <fullName>New_Version_GH_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Version GH Request</label>
    <referenceTo>Order_Request__c</referenceTo>
    <relationshipLabel>Old version GH Requests</relationshipLabel>
    <relationshipName>GH_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>