src/objects/Order_Request__c/fields/Number_of_people_for_event__c.field-meta.xml
<CustomField>
    <fullName>Number_of_people_for_event__c</fullName>
    <label>Number of people for event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>