src/objects/Order_Request__c/fields/Other_Cost_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Cost_Type__c</fullName>
    <label>Other Cost Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>