src/objects/Order_Request__c/fields/Other_Costs__c.field-meta.xml
<CustomField>
    <fullName>Other_Costs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Costs</label>
    <type>Checkbox</type>
</CustomField>