src/objects/Order_Request__c/fields/Other_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Event_Type__c</fullName>
    <label>Other Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>