src/objects/Order_Request__c/fields/Recipient_Name_List__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name_List__c</fullName>
    <label>Recipient Name List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>