src/objects/Order_Request__c/fields/SBG__c.field-meta.xml
<CustomField>
    <fullName>SBG__c</fullName>
    <label>SBG</label>
    <length>30</length>
    <type>Text</type>
</CustomField>