src/objects/Order_Request__c/fields/SBU__c.field-meta.xml
<CustomField>
    <fullName>SBU__c</fullName>
    <label>SBU</label>
    <length>30</length>
    <type>Text</type>
</CustomField>