src/objects/Order_Request__c/fields/Spouse_invited_to_Event__c.field-meta.xml
<CustomField>
    <fullName>Spouse_invited_to_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Spouse invited to Event</label>
    <type>Checkbox</type>
</CustomField>