src/objects/Order_Request__c/fields/Type_of_Meals_Entertainment__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Meals_Entertainment__c</fullName>
    <label>Type of Meals/Entertainment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Concert Tickets</fullName>
            </value>
            <value>
                <fullName>Food Coupons</fullName>
            </value>
            <value>
                <fullName>Bouquet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>