src/objects/Order_Request__c/fields/Visa_Cost__c.field-meta.xml
<CustomField>
    <fullName>Visa_Cost__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa Cost</label>
    <type>Checkbox</type>
</CustomField>