src/objects/Order_Request__c/recordTypes/GH_App_Request.recordType-meta.xml
<RecordType>
    <fullName>GH_App_Request</fullName>
    <active>true</active>
    <label>GH App Request</label>
</RecordType>