src/objects/Order_Request__c/recordTypes/Gift.recordType-meta.xml
<RecordType>
    <fullName>Gift</fullName>
    <active>true</active>
    <label>Gifts</label>
</RecordType>