src/objects/Order_Request__c/recordTypes/Meals_Entertainment.recordType-meta.xml
<RecordType>
    <fullName>Meals_Entertainment</fullName>
    <active>true</active>
    <label>Meals/Entertainment</label>
</RecordType>